2012-07-20  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected case error in CSS reference for BE module, resolves #39117
	* Corrected error with hook names in the manual, resolves #33196
	* Released version 2.0.3

2012-06-15  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected case error in layout reference for BE module, resolves #38385
	* Released version 2.0.2

2012-06-15  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.0.1 (with missing updated manual)
	* Released version 2.0.0

2012-06-09  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for custom data handlers, resolves #29196

2012-06-07  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for namespaces in XML handling, resolves #30779

2012-05-29  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added check to avoid overwriting imported records' pid, references #31787 (thanks to Ian)
	* Added check to use only records with non-empty external references in mapping, resolves #31787 (thanks to Ian)

2012-05-25  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Used SwiftMailer for reporting mail, resolves #13711

2012-05-21  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Replaced excludedOperations by disabledOperations for naming consistency, resolves #29301

2012-05-20  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed the doNotLoadInFE flag, resolves #37325
	* Moved the whole BE module logic to Extbase and ExtJS, resolves #13836
	* Adapted the BE module to match the TYPO3 skin, resolves #13835
	* Removed all legacy code, resolves #5106

2011-05-20  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Used PHP time limit also for AJAX timeout, resolves #25893

2011-05-14  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected time zone handling in sample parse date method, resolves #26292
	* Properly localized all strings in extension configuration, resolves #13647

2011-05-06  Francois Suter (Cobweb)  <typo3@cobweb.ch>
